--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 LastStand/Debug/*
 LastStand/LastStand.vcxproj
 LastStand/LastStand.vcxproj.filters
+LastStand/LastStand.vcxproj.user
 LastStand.opensdf
 LastStand.sdf
 LastStand.sln
