--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 LastStand/Debug/*
+LastStand/Data/*
 LastStand/LastStand.vcxproj
 LastStand/LastStand.vcxproj.filters
 LastStand/LastStand.vcxproj.user
